Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumObjObject.quorum
class Main
    action Main
        Number n
        Object o
        n:SetValue(7.5)
        o = cast(Object, b)
        Number num = cast(Number, o)
        if num:GetValue() = 7.5
            output "passed"
        end
    end
end
