Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjNumObjField.quorum
class main
    Number n
    Boolean bool
    action Main
        n:SetValue(7.5)
        bool = cast(Boolean, n)
    end
end